--- a/workout.html
+++ b/workout.html
@@ -51,7 +51,7 @@
     <p><b>Common mistakes:</b> Bench too steep, flared elbows, bouncing off chest.</p>
     <p><b>Sets/Reps:</b> 3–4 × 6–10</p>
     <p><b>Progression:</b> Add weight/reps, pause at bottom, slower lowering.</p>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dmoose.com%2Fblogs%2Fchest%2Fincline-dumbbell-press%3Fsrsltid%3DAfmBOoqWls-l3XXaSgsWwav4MUz8mwvqc5n3QWmKIBMHceeqmwV-f3cV&psig=AOvVaw10LBk5iEhtgrSOijbg6GF5&ust=1756488330854000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCMiY94mDro8DFQAAAAAdAAAAABAE" alt="Incline press example 1">
+    <img src="https://cdn.shopify.com/s/files/1/1497/9682/files/2_2ede191f-4aa5-4b2e-81e7-e16850e948a4.jpg?v=1648826784" alt="Incline press example 1">
   </details>
 
   <!-- Exercise 2 -->
