--- a/blog.html
+++ b/blog.html
@@ -21,14 +21,46 @@
 
   <main>
     <h2>Blog</h2>
-    <article class="card">
-      <h3> Quote</h3>
-      <p>I know one thing, that I know Nothing - Socrates</p>
-    </article>
-    <article class="card">
-      <h3>Random Thoughts</h3>
-      <p>Less is more. Focused work beats multitasking.</p>
-    </article>
+
+    <!-- First Blog -->
+    <details>
+      <summary>Math Mental Models for Life & Decisions — Reading time: ~5 minutes</summary>
+      <div class="blog-content">
+        <p>If you’ve ever heard Charlie Munger talk about decision-making, you’ll know he insists on building a “latticework of mental models.” One of the richest sources of these models is math—not the abstract equations you struggled with in school, but the patterns of growth, risk, and reality checks that quietly shape everything in daily life. In this post, we’ll look at a handful of math models you can actually use—and how they show up in real-world choices.</p>
+
+        <h4>1. Compounding — The Quiet Superpower</h4>
+        <p>Compounding is exponential growth in action. Money, habits, and even knowledge all compound. If you invest ₹10,000 at 12%, it doubles in about six years (rule of 72). If you learn one new coding skill every week, in a year you’re not just 52 steps ahead—you’re connecting skills, multiplying your options.</p>
+        <p><strong>Real-life use:</strong> Start early, stay consistent, and avoid interruptions. A gym habit, a savings account, or a daily journal all get dramatically easier to maintain if you give them time to compound.</p>
+
+        <h4>2. Power Laws — Focus on the Vital Few</h4>
+        <p>The 80/20 rule is a power law in disguise: 20% of inputs often drive 80% of results. In business, a few customers often bring in most of the revenue. In studying, a few chapters carry most of the test weight.</p>
+        <p><strong>Real-life use:</strong> Ask, What are the few things that really matter? Cut the trivial many. Spend 80% of your effort on the 20% of tasks that actually move the needle.</p>
+
+        <h4>3. Regression to the Mean — Don’t Get Fooled by Extremes</h4>
+        <p>When something swings to an extreme—an unusually good exam score, a lucky stock pick—it usually drifts back toward average next time. People often mistake extremes for new norms.</p>
+        <p><strong>Real-life use:</strong> Don’t over-celebrate one win or despair over one failure. Look for trends, not outliers. That coding bug that mysteriously fixed itself? Don’t assume you’ve leveled up permanently—verify it.</p>
+
+        <h4>4. Base Rates — Start With What Usually Happens</h4>
+        <p>Before making a prediction, ask: what happens on average in similar situations? If most startups fail within 5 years, that’s your base rate. If 70% of job applicants don’t hear back, that’s the reality you start with.</p>
+        <p><strong>Real-life use:</strong> Before betting on exceptions (“This stock will triple!”), ground yourself in the norm. If the base rate is against you, you need extraordinary evidence or a smarter plan.</p>
+
+        <h4>5. Expected Value — Thinking in Probabilities</h4>
+        <p>Not all wins and losses are equal. Expected Value (EV) = probability × payoff. A 10% chance of winning ₹10,000 is worth ₹1,000 in expectation. A guaranteed ₹900 may be better, depending on your risk appetite.</p>
+        <p><strong>Real-life use:</strong> Apply EV thinking to career moves, not just gambling. A risky project with 30% chance of big rewards might still beat a “safe” option, if failure won’t ruin you.</p>
+
+        <h4>6. Sensitivity Analysis — What Really Moves the Needle?</h4>
+        <p>Change one variable at a time and see how the outcome shifts. In financial models, it’s interest rates or customer growth. In coding, it’s usually one performance bottleneck.</p>
+        <p><strong>Real-life use:</strong> Don’t tweak everything at once. When debugging, change one input, test, then note the effect. Same with habits—if you want to sleep better, change caffeine first before overhauling your whole routine.</p>
+      </div>
+    </details>
+
+    <!-- Example of another short blog -->
+    <details>
+      <summary>Random Thoughts</summary>
+      <div class="blog-content">
+        <p>Less is more. Focused work beats multitasking.</p>
+      </div>
+    </details>
   </main>
 </body>
 </html>
