--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
         <p><strong>Real-life use:</strong> Ask, What are the few things that really matter? Cut the trivial many. Spend 80% of your effort on the 20% of tasks that actually move the needle.</p>
 
         <h4>3. Regression to the Mean — Don’t Get Fooled by Extremes</h4>
-        <p>When something swings to an extreme—an unusually good exam score, a lucky stock pick—it usually drifts back toward average next time. People often mistake extremes for new norms.</p>
+        <p>When something swings to an extreme - an unusually good exam score, a lucky stock pick—it usually drifts back toward average next time. People often mistake extremes for new norms.</p>
         <p><strong>Real-life use:</strong> Don’t over-celebrate one win or despair over one failure. Look for trends, not outliers. That coding bug that mysteriously fixed itself? Don’t assume you’ve leveled up permanently—verify it.</p>
 
         <h4>4. Base Rates — Start With What Usually Happens</h4>
