--- a/workout.html
+++ b/workout.html
@@ -134,25 +134,119 @@
     <li>Joint health: add rotator cuff work (bands, face pulls).</li>
     <li>Increase load if you hit top reps with perfect form twice in a row.</li>
   </ul>
+
+
+
+  </article>
+
+<!-- Pull Day -->
+<article id="pull" class="card">
+  <h3>Pull Day (Back, Biceps, Rear Delts)</h3>
+
+  <p><b>Purpose:</b> Focus on pull muscles — back, biceps, rear delts — with a mix of compound and isolation moves for strength, size, and posture improvement.</p>
+  <p><b>Why a 3-part split?</b> Better recovery, faster progress, and clearer programming.</p>
+  <p><b>Warm-up (non-negotiable):</b> 5–10 min cardio + band pull-aparts, face pulls, light sets of first exercise.</p>
+
+  <h4>Workout Overview (7 Exercises — follow the order)</h4>
+
+  <!-- Exercise 1 -->
+  <details>
+    <summary><b>Pull-Ups (or Lat Pulldown)</b> — Lats, biceps, upper back</summary>
+    <p><b>How to:</b> Hang from bar, pull chest toward bar, lower slow. If not ready, use an assisted machine or bands.</p>
+    <p><b>Cues:</b> Drive elbows down, avoid shrugging shoulders.</p>
+    <p><b>Common mistakes:</b> Half reps, swinging, neck straining.</p>
+    <p><b>Sets/Reps:</b> 3–4 × 6–12</p>
+    <p><b>Progression:</b> Add weight, slow eccentric, pause at top.</p>
+    <img src="images/pullup1.jpg" alt="Pull-up example 1">
+    <img src="images/pullup2.jpg" alt="Pull-up example 2">
+  </details>
+
+  <!-- Exercise 2 -->
+  <details>
+    <summary><b>Barbell Rows</b> — Mid-back, lats, biceps</summary>
+    <p><b>How to:</b> Hinge at hips, flat back, pull barbell to lower ribs, lower slow.</p>
+    <p><b>Cues:</b> Brace core, squeeze shoulder blades.</p>
+    <p><b>Common mistakes:</b> Rounding back, jerking weight, standing too upright.</p>
+    <p><b>Sets/Reps:</b> 3 × 8–10</p>
+    <p><b>Progression:</b> Increase weight, slower reps, try underhand grip.</p>
+    <img src="images/barbell-row1.jpg" alt="Barbell row example 1">
+    <img src="images/barbell-row2.jpg" alt="Barbell row example 2">
+  </details>
+
+  <!-- Exercise 3 -->
+  <details>
+    <summary><b>Seated Cable Row</b> — Back thickness</summary>
+    <p><b>How to:</b> Sit tall, neutral spine, pull handle to midsection, control back.</p>
+    <p><b>Cues:</b> Chest up, pull with elbows, not hands.</p>
+    <p><b>Common mistakes:</b> Leaning back too much, using momentum.</p>
+    <p><b>Sets/Reps:</b> 3 × 10–12</p>
+    <p><b>Progression:</b> Slower tempo, heavier load, single-arm rows.</p>
+    <img src="images/cablerow1.jpg" alt="Cable row example 1">
+    <img src="images/cablerow2.jpg" alt="Cable row example 2">
+  </details>
+
+  <!-- Exercise 4 -->
+  <details>
+    <summary><b>Face Pulls</b> — Rear delts, traps, rotator cuff</summary>
+    <p><b>How to:</b> Use rope at cable station. Pull toward forehead, elbows high.</p>
+    <p><b>Cues:</b> External rotate shoulders, squeeze rear delts.</p>
+    <p><b>Common mistakes:</b> Elbows dropping, shrugging traps, rushing reps.</p>
+    <p><b>Sets/Reps:</b> 3 × 12–15</p>
+    <p><b>Progression:</b> Add weight, pause at contraction, slower reps.</p>
+    <img src="images/facepull1.jpg" alt="Face pull example 1">
+    <img src="images/facepull2.jpg" alt="Face pull example 2">
+  </details>
+
+  <!-- Exercise 5 -->
+  <details>
+    <summary><b>Dumbbell Bicep Curls</b> — Biceps isolation</summary>
+    <p><b>How to:</b> Hold dumbbells, curl up, rotate palms forward, lower slow.</p>
+    <p><b>Cues:</b> Elbows tucked, control lowering.</p>
+    <p><b>Common mistakes:</b> Swinging arms, flaring elbows.</p>
+    <p><b>Sets/Reps:</b> 3 × 10–15</p>
+    <p><b>Progression:</b> Heavier dumbbells, tempo work, hammer curls.</p>
+    <img src="images/bicepcurl1.jpg" alt="Bicep curl example 1">
+    <img src="images/bicepcurl2.jpg" alt="Bicep curl example 2">
+  </details>
+
+  <!-- Exercise 6 -->
+  <details>
+    <summary><b>Hammer Curls</b> — Biceps brachialis, forearms</summary>
+    <p><b>How to:</b> Hold dumbbells neutral grip, curl up, squeeze, lower under control.</p>
+    <p><b>Cues:</b> Keep wrists straight, elbows close.</p>
+    <p><b>Common mistakes:</b> Rotating wrists, swinging weight.</p>
+    <p><b>Sets/Reps:</b> 3 × 8–12</p>
+    <p><b>Progression:</b> Alternate arms, add pause at top.</p>
+    <img src="images/hammercurl1.jpg" alt="Hammer curl example 1">
+    <img src="images/hammercurl2.jpg" alt="Hammer curl example 2">
+  </details>
+
+  <!-- Exercise 7 -->
+  <details>
+    <summary><b>Reverse Fly</b> — Rear delts, upper back</summary>
+    <p><b>How to:</b> Sit or hinge forward, arms hang down, raise dumbbells out to sides until shoulder level.</p>
+    <p><b>Cues:</b> Lead with elbows, slow control.</p>
+    <p><b>Common mistakes:</b> Shrugging traps, swinging weights.</p>
+    <p><b>Sets/Reps:</b> 3 × 12–15</p>
+    <p><b>Progression:</b> Increase weight slowly, tempo work, cables/bands for variety.</p>
+    <img src="images/reversefly1.jpg" alt="Reverse fly example 1">
+    <img src="images/reversefly2.jpg" alt="Reverse fly example 2">
+  </details>
+
+  <h4>Program Notes</h4>
+  <ul>
+    <li>Order: compound → accessory → isolation → rear delts.</li>
+    <li>Progressive overload: track reps/weight weekly.</li>
+    <li>Recovery: 48–72 hrs before repeating pull muscles.</li>
+    <li>Joint health: don’t skip face pulls or rotator cuff work.</li>
+    <li>Increase load if you hit top reps with perfect form twice in a row.</li>
+  </ul>
 </article>
 
 
-    <!-- Pull Day -->
-    <article id="pull" class="card">
-      <h3>Pull Day (Back, Biceps)</h3>
-      <p>
-        Pull workouts strengthen your back and arms. They improve posture 
-        and give that “V-shape” look .
-      </p>
-      <ul>
-        <li><b>Pull-ups</b> – Best for back and biceps (start with assisted if needed).</li>
-        <li><b>Dumbbell Rows</b> – Builds mid-back thickness.</li>
-        <li><b>Bicep Curls</b> – Simple and effective for arm growth.</li>
-        <li><b>Face Pulls</b> – Great for shoulder health.</li>
-        <li><b>Lat Pulldown</b> – Perfect beginner substitute for pull-ups.</li>
-      </ul>
-      <img src="images/pull-workout.jpg" alt="Pull workout" />
-    </article>
+
+
+    
 
     <!-- Leg Day -->
     <article id="legs" class="card">
