--- a/workout.html
+++ b/workout.html
@@ -144,8 +144,7 @@
   <h3>Pull Day (Back, Biceps, Rear Delts)</h3>
 
   <p><b>Purpose:</b> Focus on pull muscles — back, biceps, rear delts — with a mix of compound and isolation moves for strength, size, and posture improvement.</p>
-  <p><b>Why a 3-part split?</b> Better recovery, faster progress, and clearer programming.</p>
-  <p><b>Warm-up (non-negotiable):</b> 5–10 min cardio + band pull-aparts, face pulls, light sets of first exercise.</p>
+  <p><b>Warm-up:</b> 5–10 min cardio + band pull-aparts, face pulls, light sets of first exercise.</p>
 
   <h4>Workout Overview (7 Exercises — follow the order)</h4>
 
