--- a/workout.html
+++ b/workout.html
@@ -156,10 +156,7 @@
     <p><b>Common mistakes:</b> Half reps, swinging, neck straining.</p>
     <p><b>Sets/Reps:</b> 3–4 × 6–12</p>
     <p><b>Progression:</b> Add weight, slow eccentric, pause at top.</p>
-    <img src="images/pullup1.jpg" alt="Pull-up example 1">
-    <img src="images/pullup2.jpg" alt="Pull-up example 2">
-  </details>
-
+    <img src="images/latzug.webp" alt="Pull-up example 1">
   <!-- Exercise 2 -->
   <details>
     <summary><b>Barbell Rows</b> — Mid-back, lats, biceps</summary>
