--- a/workout.html
+++ b/workout.html
@@ -165,8 +165,7 @@
     <p><b>Common mistakes:</b> Rounding back, jerking weight, standing too upright.</p>
     <p><b>Sets/Reps:</b> 3 × 8–10</p>
     <p><b>Progression:</b> Increase weight, slower reps, try underhand grip.</p>
-    <img src="images/barbell-row1.jpg" alt="Barbell row example 1">
-    <img src="images/barbell-row2.jpg" alt="Barbell row example 2">
+    <img src="images/rudern-langhantel-800x448.webp" alt="Barbell row example 1">
   </details>
 
   <!-- Exercise 3 -->
