--- a/workout.html
+++ b/workout.html
@@ -6,7 +6,7 @@
   <title>Workout — The Simple Guy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="workout-page">
   <header>
     <h1 class="site-title">The Simple Guy</h1>
     <nav>
@@ -157,6 +157,8 @@
     <p><b>Sets/Reps:</b> 3–4 × 6–12</p>
     <p><b>Progression:</b> Add weight, slow eccentric, pause at top.</p>
     <img src="images/latzug.webp" alt="Pull-up example 1">
+ </details>
+    
   <!-- Exercise 2 -->
   <details>
     <summary><b>Barbell Rows</b> — Mid-back, lats, biceps</summary>
