--- a/workout.html
+++ b/workout.html
@@ -178,8 +178,7 @@
     <p><b>Common mistakes:</b> Leaning back too much, using momentum.</p>
     <p><b>Sets/Reps:</b> 3 × 10–12</p>
     <p><b>Progression:</b> Slower tempo, heavier load, single-arm rows.</p>
-    <img src="images/cablerow1.jpg" alt="Cable row example 1">
-    <img src="images/cablerow2.jpg" alt="Cable row example 2">
+    <img src="images/seated cable.jpg" alt="Cable row example 1">
   </details>
 
   <!-- Exercise 4 -->
@@ -190,8 +189,7 @@
     <p><b>Common mistakes:</b> Elbows dropping, shrugging traps, rushing reps.</p>
     <p><b>Sets/Reps:</b> 3 × 12–15</p>
     <p><b>Progression:</b> Add weight, pause at contraction, slower reps.</p>
-    <img src="images/facepull1.jpg" alt="Face pull example 1">
-    <img src="images/facepull2.jpg" alt="Face pull example 2">
+    <img src="images/Face_Pull.webp" alt="Face pull example 1">
   </details>
 
   <!-- Exercise 5 -->
@@ -202,8 +200,7 @@
     <p><b>Common mistakes:</b> Swinging arms, flaring elbows.</p>
     <p><b>Sets/Reps:</b> 3 × 10–15</p>
     <p><b>Progression:</b> Heavier dumbbells, tempo work, hammer curls.</p>
-    <img src="images/bicepcurl1.jpg" alt="Bicep curl example 1">
-    <img src="images/bicepcurl2.jpg" alt="Bicep curl example 2">
+    <img src="images/bizeps-hammercurls.webp" alt="Bicep curl example 1">
   </details>
 
   <!-- Exercise 6 -->
@@ -214,8 +211,7 @@
     <p><b>Common mistakes:</b> Rotating wrists, swinging weight.</p>
     <p><b>Sets/Reps:</b> 3 × 8–12</p>
     <p><b>Progression:</b> Alternate arms, add pause at top.</p>
-    <img src="images/hammercurl1.jpg" alt="Hammer curl example 1">
-    <img src="images/hammercurl2.jpg" alt="Hammer curl example 2">
+    <img src="images/Dumbbell-Alternate-Biceps-Curl-resized.webp" alt="Hammer curl example 1">
   </details>
 
   <!-- Exercise 7 -->
@@ -226,8 +222,7 @@
     <p><b>Common mistakes:</b> Shrugging traps, swinging weights.</p>
     <p><b>Sets/Reps:</b> 3 × 12–15</p>
     <p><b>Progression:</b> Increase weight slowly, tempo work, cables/bands for variety.</p>
-    <img src="images/reversefly1.jpg" alt="Reverse fly example 1">
-    <img src="images/reversefly2.jpg" alt="Reverse fly example 2">
+    <img src="images/Reverse Fly.jpg" alt="Reverse fly example 1">
   </details>
 
   <h4>Program Notes</h4>
