--- a/workout.html
+++ b/workout.html
@@ -233,29 +233,99 @@
     <li>Joint health: don’t skip face pulls or rotator cuff work.</li>
     <li>Increase load if you hit top reps with perfect form twice in a row.</li>
   </ul>
+
+
+
+
+
+<!-- Leg Day -->
+<article id="legs" class="card">
+  <h3>Leg Day (Quads, Hamstrings, Glutes, Calves)</h3>
+
+  <p><b>Purpose:</b> Build strength, size, and balance by training the foundation of your body — the legs. Strong legs improve performance, posture, and overall aesthetics while boosting natural hormone release.</p>
+  <p><b>Why train legs?</b> Improves stability, supports athleticism, balances physique, and enhances full-body growth hormones.</p>
+  <p><b>Warm-up:</b> 5–10 min cardio + bodyweight squats or mobility drills before loading weight.</p>
+
+  <h4>Workout Overview (5 Exercises — follow the order)</h4>
+
+  <!-- Exercise 1 -->
+  <details>
+    <summary><b>Barbell Squats</b> — Quads, glutes, hamstrings</summary>
+    <p><b>How to:</b> Bar on upper back, brace core, squat deep with controlled motion, drive up through heels.</p>
+    <p><b>Cues:</b> Back straight, chest up, knees in line with toes.</p>
+    <p><b>Common mistakes:</b> Shallow depth, collapsing knees, excessive forward lean.</p>
+    <p><b>Sets/Reps:</b> 3–4 × 8–12</p>
+    <p><b>Progression:</b> Add weight weekly, pause at bottom, slower lowering.</p>
+    <img src="images/squat1.jpg" alt="Barbell squat example 1">
+    <img src="images/squat2.jpg" alt="Barbell squat example 2">
+  </details>
+
+  <!-- Exercise 2 -->
+  <details>
+    <summary><b>Bulgarian Split Squats</b> — Quads, glutes, stability</summary>
+    <p><b>How to:</b> Rear foot elevated on bench, lunge down with front leg until thigh is parallel, push through heel to rise.</p>
+    <p><b>Cues:</b> Keep torso upright, control movement, focus on front leg tension.</p>
+    <p><b>Common mistakes:</b> Bouncing reps, leaning too far forward, rushing.</p>
+    <p><b>Sets/Reps:</b> 3 × 10–12 per leg</p>
+    <p><b>Progression:</b> Hold dumbbells, slow tempo, add pause at bottom.</p>
+    <img src="images/bulgarian1.jpg" alt="Bulgarian split squat example 1">
+  </details>
+
+  <!-- Exercise 3 -->
+  <details>
+    <summary><b>Leg Extensions</b> — Quad isolation</summary>
+    <p><b>How to:</b> Sit on machine, extend legs fully, squeeze quads at top, lower under control.</p>
+    <p><b>Cues:</b> Keep hips tight against seat, focus on controlled range.</p>
+    <p><b>Common mistakes:</b> Swinging weight, going too heavy, incomplete range.</p>
+    <p><b>Sets/Reps:</b> 3 × 12–15</p>
+    <p><b>Progression:</b> Slower lowering, drop sets, single-leg variations.</p>
+    <img src="images/legextension1.jpg" alt="Leg extension example 1">
+  </details>
+
+  <!-- Exercise 4 -->
+  <details>
+    <summary><b>Lying Leg Curls</b> — Hamstrings</summary>
+    <p><b>How to:</b> Lie on machine, curl pad toward glutes, control back down.</p>
+    <p><b>Cues:</b> Keep hips pressed down, squeeze hamstrings hard at top.</p>
+    <p><b>Common mistakes:</b> Lifting hips, jerking weight, incomplete reps.</p>
+    <p><b>Sets/Reps:</b> 3 × 12–15</p>
+    <p><b>Progression:</b> Add weight, slower tempo, use single-leg curls.</p>
+    <img src="images/legcurl1.jpg" alt="Leg curl example 1">
+  </details>
+
+  <!-- Exercise 5 -->
+  <details>
+    <summary><b>Standing Calf Raises</b> — Calves, ankle stability</summary>
+    <p><b>How to:</b> Stand on calf raise machine/platform, raise heels as high as possible, lower slow with full stretch.</p>
+    <p><b>Cues:</b> Pause at top, stretch at bottom, controlled motion.</p>
+    <p><b>Common mistakes:</b> Bouncing, rushing, incomplete range.</p>
+    <p><b>Sets/Reps:</b> 4 × 15–20</p>
+    <p><b>Progression:</b> Heavier load, single-leg variations, extended holds.</p>
+    <img src="images/calfraise1.jpg" alt="Standing calf raise example 1">
+    <img src="images/calfraise2.jpg" alt="Standing calf raise example 2">
+  </details>
+
+  <h4>Program Notes</h4>
+  <ul>
+    <li>Form always comes before weight — don’t ego lift.</li>
+    <li>Warm-up well to protect knees and hips.</li>
+    <li>Stretch quads, hamstrings, and calves after training for better recovery.</li>
+    <li>Train legs 1–2× per week depending on recovery.</li>
+  </ul>
 </article>
 
 
 
 
-    
 
-    <!-- Leg Day -->
-    <article id="legs" class="card">
-      <h3>Leg Day (Quads, Hamstrings, Glutes, Calves)</h3>
-      <p>
-        Never skip leg day! Strong legs improve your athletic ability 
-        and overall balance.
-      </p>
-      <ul>
-        <li><b>Bodyweight Squats</b> – Start simple and focus on form.</li>
-        <li><b>Lunges</b> – Build balance and strength.</li>
-        <li><b>Romanian Deadlifts</b> – Strengthens hamstrings and glutes.</li>
-        <li><b>Calf Raises</b> – For strong and defined calves.</li>
-        <li><b>Leg Press</b> – A safe way to add weight for beginners.</li>
-      </ul>
-      <img src="images/legs-workout.jpg" alt="Leg workout" />
-    </article>
+
+
+
+
+
+
+
+  
 
     <!-- Diet Basics -->
     <article id="diet-basics" class="card">
