--- a/workout.html
+++ b/workout.html
@@ -240,10 +240,9 @@
 
 <!-- Leg Day -->
 <article id="legs" class="card">
-  <h3>Leg Day (Quads, Hamstrings, Glutes, Calves)</h3>
+  <h3>Leg Workout Guide: Build Strength and Size</h3>
 
-  <p><b>Purpose:</b> Build strength, size, and balance by training the foundation of your body — the legs. Strong legs improve performance, posture, and overall aesthetics while boosting natural hormone release.</p>
-  <p><b>Why train legs?</b> Improves stability, supports athleticism, balances physique, and enhances full-body growth hormones.</p>
+  <p><b>Purpose:</b> When it comes to fitness, one of the biggest mistakes people make is skipping leg day. But your legs aren’t just another muscle group — they are the foundation of your strength, balance, and overall physique. Training legs doesn’t only make you look balanced, it also boosts natural hormones like testosterone and growth hormone, which support full-body muscle development. </p>
   <p><b>Warm-up:</b> 5–10 min cardio + bodyweight squats or mobility drills before loading weight.</p>
 
   <h4>Workout Overview (5 Exercises — follow the order)</h4>
@@ -312,6 +311,8 @@
     <li>Stretch quads, hamstrings, and calves after training for better recovery.</li>
     <li>Train legs 1–2× per week depending on recovery.</li>
   </ul>
+
+  <p>Leg training is tough, but it’s also the most rewarding. The strength, balance, and growth you get from consistent leg workouts reflect in your entire body. So next time you think of skipping leg day — don’t. Train hard, stay consistent, and your legs will thank you.</p>
 </article>
 
 
