--- a/workout.html
+++ b/workout.html
@@ -255,8 +255,7 @@
     <p><b>Common mistakes:</b> Shallow depth, collapsing knees, excessive forward lean.</p>
     <p><b>Sets/Reps:</b> 3–4 × 8–12</p>
     <p><b>Progression:</b> Add weight weekly, pause at bottom, slower lowering.</p>
-    <img src="images/squat1.jpg" alt="Barbell squat example 1">
-    <img src="images/squat2.jpg" alt="Barbell squat example 2">
+    <img src="images/gym.gif" alt="Barbell squat">
   </details>
 
   <!-- Exercise 2 -->
@@ -267,7 +266,7 @@
     <p><b>Common mistakes:</b> Bouncing reps, leaning too far forward, rushing.</p>
     <p><b>Sets/Reps:</b> 3 × 10–12 per leg</p>
     <p><b>Progression:</b> Hold dumbbells, slow tempo, add pause at bottom.</p>
-    <img src="images/bulgarian1.jpg" alt="Bulgarian split squat example 1">
+    <img src="images/Dumbbell-Bulgarian-Split-Squat.gif" alt="Bulgarian split">
   </details>
 
   <!-- Exercise 3 -->
@@ -278,7 +277,7 @@
     <p><b>Common mistakes:</b> Swinging weight, going too heavy, incomplete range.</p>
     <p><b>Sets/Reps:</b> 3 × 12–15</p>
     <p><b>Progression:</b> Slower lowering, drop sets, single-leg variations.</p>
-    <img src="images/legextension1.jpg" alt="Leg extension example 1">
+    <img src="images/LEG-EXTENSION.gif" alt="Leg extension">
   </details>
 
   <!-- Exercise 4 -->
@@ -289,7 +288,7 @@
     <p><b>Common mistakes:</b> Lifting hips, jerking weight, incomplete reps.</p>
     <p><b>Sets/Reps:</b> 3 × 12–15</p>
     <p><b>Progression:</b> Add weight, slower tempo, use single-leg curls.</p>
-    <img src="images/legcurl1.jpg" alt="Leg curl example 1">
+    <img src="images/Lying-Dumbbell-Leg-Curl.gif" alt="Leg curl">
   </details>
 
   <!-- Exercise 5 -->
@@ -300,8 +299,7 @@
     <p><b>Common mistakes:</b> Bouncing, rushing, incomplete range.</p>
     <p><b>Sets/Reps:</b> 4 × 15–20</p>
     <p><b>Progression:</b> Heavier load, single-leg variations, extended holds.</p>
-    <img src="images/calfraise1.jpg" alt="Standing calf raise example 1">
-    <img src="images/calfraise2.jpg" alt="Standing calf raise example 2">
+    <img src="images/Dumbbell-Calf-Raise.gif" alt="Standing calf raise">
   </details>
 
   <h4>Program Notes</h4>
