--- a/books.html
+++ b/books.html
@@ -67,7 +67,7 @@
       <div class="book-info">
         <h3>Zorba the Buddha</h3>
         <h4>Osho</h4>
-        <p>“Zorba the Buddha” by Osho is one of my favorite books.
+        <p>Zorba the Buddha by Osho is one of my favorite books.
 What I love most is how it shows the divided life of man - either as Zorba, lost in pleasure, or as Buddha, lost in silence.
 Zorba dances, sings, celebrates, but has no depth.
 Buddha meditates, transcends, but has no song.
