--- a/books.html
+++ b/books.html
@@ -58,7 +58,11 @@
       <div class="book-info">
         <h3>Siddhartha</h3>
         <h4>Hermann Hesse</h4>
-        <p>A spiritual journey of self-discovery, this novel follows Siddhartha as he seeks meaning beyond material success. It blends wisdom, philosophy, and simplicity, teaching that true fulfillment comes from within. A timeless classic on life’s deeper questions.</p>
+        <p><i>One of those rare books that doesn’t just speak to you, it changes something within.</i>
+It follows a spiritual journey beyond wealth, rituals, and teachings, showing that truth isn’t given, it’s lived.
+What stayed with me is its quiet wisdom: real peace comes not from the outside, but from deeply listening to your own soul.
+Beautifully simple yet full of layers, it made me reflect on what truly matters.
+<i>A timeless classic for anyone who has ever paused and asked, What is the purpose of my life?</i></p>
       </div>
     </div>
 
