--- a/books.html
+++ b/books.html
@@ -58,11 +58,11 @@
       <div class="book-info">
         <h3>Siddhartha</h3>
         <h4>Hermann Hesse</h4>
-        <p><i>One of those rare books that doesn’t just speak to you, it changes something within.</i>
-It follows a spiritual journey beyond wealth, rituals, and teachings, showing that truth isn’t given, it’s lived.
+        <p><i>One of those rare books that doesn’t just speak to you, it changes something within.</i></p>
+<p>It follows a spiritual journey beyond wealth, rituals, and teachings, showing that truth isn’t given, it’s lived.
 What stayed with me is its quiet wisdom: real peace comes not from the outside, but from deeply listening to your own soul.
-Beautifully simple yet full of layers, it made me reflect on what truly matters.
-<i>A timeless classic for anyone who has ever paused and asked, What is the purpose of my life?</i></p>
+Beautifully simple yet full of layers, it made me reflect on what truly matters.</p>
+<p><i>A timeless classic for anyone who has ever paused and asked, What is the purpose of my life?</i></p>
       </div>
     </div>
 
