--- a/books.html
+++ b/books.html
@@ -71,14 +71,14 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
       <div class="book-info">
         <h3>Zorba the Buddha</h3>
         <h4>Osho</h4>
-        <p>Zorba the Buddha by Osho is one of my favorite books.
-What I love most is how it shows the divided life of man - either as Zorba, lost in pleasure, or as Buddha, lost in silence.
+        <p><i>It is one of my favorite books of Osho.</i></p>
+<p>What I love most is how it shows the divided life of man - either as Zorba, lost in pleasure, or as Buddha, lost in silence.
 Zorba dances, sings, celebrates, but has no depth.
 Buddha meditates, transcends, but has no song.
 Both are half, both incomplete.</p>
         <p>Osho’s vision of a new man - Zorba the Buddha - touched me deeply: rooted in the earth, yet open to the sky.
-A being who can love and laugh, yet remain aware and silent.
-For me, this book is not just philosophy, it’s a glimpse into the future of humanity, the meeting of matter and consciousness, body and soul.</p>
+A being who can love and laugh, yet remain aware and silent.</p>
+<p><i>For me, this book is not just philosophy, it’s a glimpse into the future of humanity, the meeting of matter and consciousness, body and soul.</i></p>
       </div>
     </div>
     
