--- a/books.html
+++ b/books.html
@@ -58,7 +58,7 @@
       <div class="book-info">
         <h3>Siddhartha</h3>
         <h4>Hermann Hesse</h4>
-        <p><i>One of those rare books that doesn’t just speak to you, it changes something within.</i></p>
+        <p><i>Siddhartha by Hermann HesseOne of those rare books that doesn’t just speak to you, it changes something within.</i></p>
 <p>It follows a spiritual journey beyond wealth, rituals, and teachings, showing that truth isn’t given, it’s lived.
 What stayed with me is its quiet wisdom: real peace comes not from the outside, but from deeply listening to your own soul.
 Beautifully simple yet full of layers, it made me reflect on what truly matters.</p>
@@ -71,7 +71,7 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
       <div class="book-info">
         <h3>Zorba the Buddha</h3>
         <h4>Osho</h4>
-        <p><i>It is one of my favorite books of Osho.</i></p>
+        <p><i>Zorba the Buddha is one of my favorite books of Osho.</i></p>
 <p>What I love most is how it shows the divided life of man - either as Zorba, lost in pleasure, or as Buddha, lost in silence.
 Zorba dances, sings, celebrates, but has no depth.
 Buddha meditates, transcends, but has no song.
@@ -90,7 +90,11 @@ A being who can love and laugh, yet remain aware and silent.</p>
       <div class="book-info">
         <h3>Tao Te Ching</h3>
         <h4>Lao Tzu</h4>
-        <p>A foundational text of Taoist philosophy, this book emphasizes living in harmony with nature and simplicity. It offers short verses filled with wisdom on humility, balance, and flow. A guide for those seeking calmness and perspective in a noisy world.</p>
+       <p><i>Tao Te Ching by Lao Tzu is a book that feels like a breath of fresh air in the middle of life’s noise.</i></p> 
+<p>It’s not just philosophy - it’s a way of being, a reminder to flow with nature instead of fighting against it.
+Through its short verses, it teaches humility, balance, and the beauty of simplicity.
+For me, it’s like holding a mirror to life, showing that peace is not something to chase but something to align with.</p>
+<p><i>A timeless guide for anyone seeking calmness, clarity, and harmony.</i></p>
       </div>
     </div>
 
