--- a/books.html
+++ b/books.html
@@ -103,7 +103,12 @@ For me, it’s like holding a mirror to life, showing that peace is not somethin
       <div class="book-info">
         <h3>Principles</h3>
         <h4>Ray Dalio</h4>
-        <p>Ray Dalio shares the principles that guided his life and business. The book breaks down decision-making, radical transparency, and learning from mistakes. It’s practical wisdom for building strong habits in both work and life.</p>
+       <p><i>Principles by Ray Dalio is a book full of practical wisdom that bridges life and business.</i></p>
+<p>Ray Dalio shares the principles that guided his journey — from decision-making to radical transparency, and the art of learning from mistakes. 
+What I love most is how it turns complex ideas into simple, actionable habits that anyone can apply. 
+It’s not just about success in work, but about building a framework to live with clarity and purpose.</p>
+<p><i>A powerful guide for anyone who wants to make better choices and grow stronger every day.</i></p>
+
       </div>
     </div>
 
@@ -112,7 +117,12 @@ For me, it’s like holding a mirror to life, showing that peace is not somethin
       <div class="book-info">
         <h3>The Almanack of Naval Ravikant</h3>
         <h4>Eric Jorgenson</h4>
-        <p>This collection of Naval Ravikant’s ideas covers wealth, happiness, and leverage. It emphasizes building specific knowledge, compounding relationships, and prioritizing freedom. A modern manual for thoughtful living and smart decision-making.</p>
+      <p><i>The Almanack of Naval Ravikant by Eric Jorgenson is like sitting with a wise friend who talks about life, wealth, and happiness in the simplest way possible.</i></p> 
+<p>Instead of chasing shortcuts, Naval shows the value of building specific knowledge, nurturing relationships that compound, and designing a life around freedom. 
+What I love is how practical it feels — not heavy theory, but clear insights that make you pause and rethink how you live and work. 
+It’s a reminder that true wealth is not just money, but peace of mind, time, and choice.</p>
+<p><i>A modern guide for anyone who wants to live smarter, lighter, and more freely.</i></p>
+
       </div>
     </div>
 
@@ -121,7 +131,12 @@ For me, it’s like holding a mirror to life, showing that peace is not somethin
       <div class="book-info">
         <h3>Poor Charlie’s Almanack</h3>
         <h4>Charlie Munger</h4>
-        <p>This book compiles the speeches and wisdom of Charlie Munger. It highlights mental models, rational thinking, and lifelong learning. A powerful guide for anyone who wants to think clearly and avoid common mistakes in life and investing.</p>
+      <p><i>Poor Charlie’s Almanack by Charlie Munger is a treasure chest of wisdom from one of the sharpest minds in investing and life.</i></p> 
+<p>Through his speeches and timeless lessons, Munger shows the power of mental models, clear thinking, and the habit of constant learning. 
+What stands out is his humor and practicality — it’s not just about money, but about avoiding foolish mistakes and building a life of rational decisions. 
+Reading it feels like getting decades of experience distilled into simple, memorable truths.</p>
+<p><i>A brilliant guide for anyone who values clarity, curiosity, and lifelong wisdom.</i></p>
+
       </div>
     </div>
 
@@ -130,7 +145,12 @@ For me, it’s like holding a mirror to life, showing that peace is not somethin
       <div class="book-info">
         <h3>Hsin Hsin Ming: The Book of Nothing</h3>
         <h4>Osho</h4>
-        <p>This book explores Zen wisdom, showing how to embrace nothingness and simplicity. It challenges overthinking and emphasizes direct experience of life. A deep yet accessible reflection on peace, silence, and freedom.</p>
+      <p><i>Hsin Hsin Ming: The Book of Nothing by Osho is one of those rare books that feels less like reading and more like sitting in silence with a master.</i></p> 
+<p>It takes Zen wisdom and makes it alive — pointing again and again to simplicity, to dropping the constant need to analyze, to just being. 
+For me, it was a reminder that peace doesn’t come from solving everything, but from letting go of the need to solve at all. 
+Each page feels like a gentle nudge away from overthinking and towards direct experience of life.</p>
+<p><i>A beautiful companion for anyone seeking freedom in silence and the joy of nothingness.</i></p>
+ 
       </div>
     </div>
 
@@ -139,7 +159,12 @@ For me, it’s like holding a mirror to life, showing that peace is not somethin
       <div class="book-info">
         <h3>The Prophet</h3>
         <h4>Kahlil Gibran</h4>
-        <p>A poetic masterpiece, The Prophet reflects on love, work, freedom, and death. Each essay-like poem offers wisdom on living a meaningful life. A short but powerful read that inspires reflection and gratitude.</p>
+      <p><i>The Prophet by Kahlil Gibran is a book I return to whenever I need gentle wisdom and poetic truth.</i></p> 
+<p>Each chapter feels like a conversation with the soul — touching on love, work, freedom, and even death with words that are simple yet deeply moving. 
+For me, reading it is like drinking from a quiet spring: refreshing, timeless, and full of grace. 
+It doesn’t just speak to the mind, it seeps into the heart and lingers there.</p>
+<p><i>A short but eternal masterpiece that inspires reflection, gratitude, and a deeper love for life.</i></p>
+ 
       </div>
     </div>
 
@@ -148,7 +173,12 @@ For me, it’s like holding a mirror to life, showing that peace is not somethin
       <div class="book-info">
         <h3>Atomic Habits</h3>
         <h4>James Clear</h4>
-        <p>This book explains how small habits compound into big changes over time. It gives practical strategies for building good habits, breaking bad ones, and designing your environment for success. A go-to guide for self-improvement.</p>
+       <p><i>Atomic Habits by James Clear is one of the most practical books I’ve read on personal growth.</i></p> 
+<p>What I loved most is how it makes change feel possible — not through giant leaps, but through tiny steps that compound into something powerful over time. 
+The strategies are simple yet effective: build good habits, break the bad ones, and shape your environment so it naturally pulls you towards success. 
+While reading, I kept finding myself nodding and thinking, “Yes, I can actually do this.”</p>
+<p><i>A clear and actionable guide for anyone who wants lasting change without feeling overwhelmed.</i></p>
+
       </div>
     </div>
   </main>
