--- a/books.html
+++ b/books.html
@@ -58,7 +58,7 @@
       <div class="book-info">
         <h3>Siddhartha</h3>
         <h4>Hermann Hesse</h4>
-        <p><i>Siddhartha by Hermann HesseOne of those rare books that doesn’t just speak to you, it changes something within.</i></p>
+        <p><i>Siddhartha by Hermann Hesse Is one of those rare books that doesn’t just speak to you, it changes something within.</i></p>
 <p>It follows a spiritual journey beyond wealth, rituals, and teachings, showing that truth isn’t given, it’s lived.
 What stayed with me is its quiet wisdom: real peace comes not from the outside, but from deeply listening to your own soul.
 Beautifully simple yet full of layers, it made me reflect on what truly matters.</p>
