--- a/books.html
+++ b/books.html
@@ -71,7 +71,7 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
       <div class="book-info">
         <h3>Zorba the Buddha</h3>
         <h4>Osho</h4>
-        <p><i>Zorba the Buddha is one of my favorite books of Osho.</i></p>
+        <p><i>We live divided - chasing pleasure like Zorba or seeking silence like Buddha- but rarely whole.</i></p>
 <p>What I love most is how it shows the divided life of man - either as Zorba, lost in pleasure, or as Buddha, lost in silence.
 Zorba dances, sings, celebrates, but has no depth.
 Buddha meditates, transcends, but has no song.
